Typography: Add OpenSans fonts using @font-face

--- a/styles/partials/_typography.scss
+++ b/styles/partials/_typography.scss
@@ -1,4 +1,4 @@
-$font-stack: Helvetica, sans-serif;
+$font-stack: "Open Sans";
 $root-font-size: 100%;
 
 html {
@@ -7,4 +7,41 @@ html {
 
 body {
     font-family: $font-stack;
+}
+
+@font-face {
+    font-family: $font-stack;
+    src: url("../assets/fonts/OpenSans-Regular.woff2") format("woff2"),
+         url("../assets/fonts/OpenSans-Regular.woff") format("woff"),
+         url("../assets/fonts/OpenSans-Regular.ttf") format("truetype");
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: $font-stack;
+    src: url("../assets/fonts/OpenSans-Italic.woff2") format("woff2"),
+         url("../assets/fonts/OpenSans-Italic.woff") format("woff"),
+         url("../assets/fonts/OpenSans-Italic.ttf") format("truetype");
+    font-weight: normal;
+    font-style: italic;
+}
+
+// Bold
+@font-face {
+    font-family: $font-stack;
+    src: url("../assets/fonts/OpenSans-Bold.woff2") format("woff2"),
+         url("../assets/fonts/OpenSans-Bold.woff") format("woff"),
+         url("../assets/fonts/OpenSans-Bold.ttf") format("truetype");
+    font-weight: bold;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: $font-stack;
+    src: url("../assets/fonts/OpenSans-BoldItalic.woff2") format("woff2"),
+         url("../assets/fonts/OpenSans-BoldItalic.woff") format("woff"),
+         url("../assets/fonts/OpenSans-BoldItalic.ttf") format("truetype");
+    font-weight: bold;
+    font-style: italic;
 }
